--- a/vignettes/Development/Quality control/Publication/Microplastic verification.Rmd
+++ b/vignettes/Development/Quality control/Publication/Microplastic verification.Rmd
@@ -23,7 +23,7 @@ version of Simplebox, in this case for microplastics.
 First, the k's are compared between R and excel 
 and consequently the steady state masses are compared. 
 
-First, the world needs to be initialized for a substance. In this case, that substance
+The world needs to be initialized for a substance. In this case, that substance
 is microplastic, which has a default radius of 2.5e-5 m. 
 
 We will first show the version of the R-code that has been adjusted to match the Excel Version. This means that the code is initialized with the parameter Test = TRUE. As such, this code should match (except for rounding differences) the results of the Excel version.
@@ -219,21 +219,7 @@ ggplot(sorted_diff, aes(x = from, y = reldif)) +
 ```
 
 
-```{r}
-soil <- kaas|>
-  filter(fromSubCompart == "naturalsoil") |>
-  filter(fromScale == "Continental") |>
-  filter(fromSpecies == "Solid")
-
-subst <- read.csv("data/Substances.csv") |>
-  filter(Substance == substance)
-World$fetchData("kfrag")
-World$fetchData("kmpdeg")
-
-```
-
-Figures 1 and 2 above show the absolute and relative differences in diagonal k's between R and excel. 
-As can be seen in Figure 2, relative differences larger than 1 percentile are soil, sediment and water compartments. 
+Figures 1 and 2 above show the absolute and relative differences in diagonal k's between R and excel As can be observed, there's no large differences.
 
 ```{r filter large diagonal differences, include=FALSE, echo=FALSE}
 diagonal_diffs <- sorted_diff |>
@@ -241,12 +227,6 @@ diagonal_diffs <- sorted_diff |>
   filter(reldif > 0.001) |>
   arrange(desc(reldif))
 ```
-
-#### Soil degradation
-The large relative differences in the diagonal k's for soil between R and Excel can be attributed to a difference in kdeg values. In R, all kdeg values are 1e-20 because R cannot solve the matrix when k's are 0. In Excel this is not a problem because the k's coming from each compartment are summed before the matrix is solved, and therefore some k's can be 0. 
-
-#### Soil dissolution
-In the current version of R dissolution is not taken into account. In Excel it is, which is another cause for some large relative differences between R and Excel. The Test variable was used to add kdis to k_Degragation in the k_Degradation function. This needs a more permanent fix with its own function (k_Dissolution) for the relevant compartments. 
 
 ### From-to k's
 
@@ -282,164 +262,11 @@ large_differences <- mergedkaas |>
 
 As can be seen in Figure 4, there are no k's with a relative difference large than 1 percentile between excel and R. 
 
-```{r}
-fromwater <- kaas |>
-  filter(fromSubCompart == "sea") |>
-  filter(fromScale == "Continental") |>
-  filter(toSubCompart == "marinesediment")
-
-
-lake <- kaas |>
-  filter(fromSubCompart == "lakesediment")
-
-
-```
-
-
-## Run again with an altered copy of the excel file
-
-An altered copy of the Excel file used for comparison was created. In this file, 
-all kdeg rates were changed from 0 to 1e-20.
-```{r Test TRUE, include=TRUE, echo=FALSE, warning=FALSE, message=FALSE}
-SBExcelName <- paste0("vignettes/Development/Quality control/SBExcel/SimpleBox4plastics_rev009-1_",substance,"_copy_deg.xlsx") 
-
-SBexcel.K <- read.xlsx(SBExcelName,
-                  colNames = FALSE,
-                  namedRegion = "K")
-SBexcel.Names <- read.xlsx(SBExcelName,
-                  colNames = FALSE,
-                  namedRegion = "box_names")
-
-colnames(SBexcel.K) <- SBexcel.Names
-
-SBexcel.K$to <-  as.character(SBexcel.Names)
-
-SBexcel.K <- pivot_longer(SBexcel.K, cols =  as.character(SBexcel.Names), values_to = "k", names_to = "from")
-
-length(SBexcel.K$k)
-
-#adding "from" and "to" acronyms to the R K matrix
-kaas <- as_tibble(World$kaas)
-unique(kaas$fromScale)
-unique(kaas$fromSubCompart)
-
-#R version does not us the acronyms of the excel version, set-up to convert them
-#Note: this map creates the wrong acronym for soil and sediment at global scale, this is fixed afterwards
-accronym_map <- c("marinesediment" = "sd2",
-                "freshwatersediment" = "sd1",
-                "lakesediment" = "sd0", #SB Excel does not have this compartment. To do: can we turn this off (exclude this compartment) for testing?
-                "agriculturalsoil" = "s2",
-                "naturalsoil" = "s1",
-                "othersoil" = "s3",
-                "air" = "a",
-                "deepocean" = "w3",
-                "sea" = "w2",
-                "river" = "w1",
-                "lake" = "w0", 
-                "cloudwater" = "cw")
-
-accronym_map2 <- c("Arctic" = "A",
-                   "Moderate" = "M",
-                   "Tropic" = "T",
-                   "Continental" = "C",
-                   "Regional" = "R")
-
-accronym_map3 <- c("Dissolved" = "D", 
-                   "Gas" = "G", 
-                   "Large" = "P", 
-                   "Small" = "A",
-                   "Solid" = "S", 
-                   "Unbound" = "U")
-
-# kaas |> filter(fromScale == "Tropic" & process == "k_Degradation") |> print(n=50)
-
-kaas <- kaas |> mutate(from =  paste0(accronym_map[fromSubCompart], 
-                            accronym_map2[fromScale], 
-                            accronym_map3[fromSpecies]),
-               to = paste0(accronym_map[toSubCompart], 
-                           accronym_map2[toScale], 
-                           accronym_map3[toSpecies]))
-
-kaas <-
-  kaas |>
-  mutate(from =
-                   ifelse((fromScale == "Tropic" | fromScale == "Arctic" | fromScale == "Moderate") &
-                            (fromSubCompart == "marinesediment" | fromSubCompart == "naturalsoil"),
-                          str_replace_all(from, c("sd2"="sd","s1"="s")),
-                          from)) |>
-  mutate(to = ifelse((toScale == "Tropic" | toScale == "Arctic" | toScale == "Moderate") &
-                       (toSubCompart == "marinesediment" | toSubCompart == "naturalsoil"), str_replace_all(to, c("sd2"="sd","s1"="s")), to))
-
-kaas2 <- kaas |>  
-  filter(from != to) |> #filtering the diagonals ou
-  group_by(from, to) %>% summarize(k = sum(k)) #R version sometimes has multiple k's per fromto box; excel only has the summed k's per box
-
-kaas2$fromto <- paste(sep = "_", kaas2$from, kaas2$to)
-
-diagonal_excel <- SBexcel.K[SBexcel.K$from == SBexcel.K$to,] #all the diagonals in excel are negative values -> sums of all the "froms" of that compartment
-
-#filter out dissolved and gas processes
-
-filtered_excel <- diagonal_excel[!endsWith(diagonal_excel$from, "D"), ]
-filtered_excel <- filtered_excel[!endsWith(filtered_excel$from, "G"), ]
-
-#filter out molecular (unbound) state
-#R model has k values per process, not per box. For the "diagonal" ("from = to") boxes, this is different than in the excel version. summing all the "froms" here to be able to compare them with excel matrix. This should result in one value for each compartment (scale-subcomp-species combo)
-
-diagonal_R <-aggregate(k ~ from, data = kaas, FUN = sum) 
-print(diagonal_R$from)
-filtered_R <- diagonal_R[!endsWith(diagonal_R$from, "U"), ]
-      
-#Check for any differences in what compartments there are between versions
-diagonal_R$from[!diagonal_R$from %in% diagonal_excel$from] # "sd0C" "sd0R" were added in sboo v1
-
-filtered_R$from[!filtered_R$from %in% filtered_excel$from]
-diagonal_excel$from[!diagonal_excel$from %in% diagonal_R$from] #all excel diagonals are in those of R
-filtered_excel$from[!filtered_excel$from %in% filtered_R$from]
-
-#Single dataframe with both the R and excel diagonals
-merged_diagonal <- merge(filtered_R, filtered_excel, by = "from", suffixes = c("_R", "_Excel")) 
-merged_diagonal$k_Excel <- -merged_diagonal$k_Excel #Turning the "negative" values from the Excel matrix into positive ones
-merged_diagonal$diff <- merged_diagonal$k_R - merged_diagonal$k_Excel 
-merged_diagonal$reldif <- merged_diagonal$diff/merged_diagonal$k_R
-
-SBexcel.K <- filter(SBexcel.K, k != 0 & SBexcel.K$from != SBexcel.K$to)
-SBexcel.K$fromto <- paste(sep = "_", SBexcel.K$from, SBexcel.K$to)
-
-mergedkaas <- merge(kaas2, SBexcel.K, by = c("from", "to"), suffixes = c("_R", "_Excel"))
-
-mergedkaas$diff <- mergedkaas$k_R - mergedkaas$k_Excel #compare R k to Excel K
-
-mergedkaas <- as_tibble(mergedkaas) |> mutate(relDif = diff/k_R)  
-
-# Plot of relative differences of the diagonals per compartment
-ggplot(merged_diagonal, aes(x = from, y = reldif)) +
-  geom_boxplot() +
-  ggtitle(paste0("Figure 5: Relative differences removal k's between R and excel for ", substance)) +
-  geom_hline(yintercept = 0.001, color = "red") +
-  geom_hline(yintercept = -0.001, color = "red") +
-  custom_theme()+
-  labs(x = "from", y = "Relative diff")
-
-ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) + 
-  geom_point() +
-  scale_color_gradient(low = "green", high = "red") +
-  ggtitle(paste0("Figure 6: Relative differences k's between R and excel for ", substance)) +
-  theme(
-    axis.text.y = element_text(size = 12),
-    axis.text.x = element_text(angle = 45, hjust = 1, size = 10), 
-    plot.margin = margin(t = 10, r = 10, b = 30, l = 10)
-  )
-
-```
-
-As can be seen in Figures 5 and 6, the changes made to the copy of the excel file 
-solved the large differences in k's between R and excel for the diagonal k's. All relative differences are now smaller than 1 percentile. 
 
 ## Compare steady state emissions
 
 The steady state masses in R and Excel were compared by calculating the relative differences
-between the masses in R and Excel (Figure 7). The figure shows that all masses between R and Excel relatively differ less than 1 percentile. 
+between the masses in R and Excel (Figure 5). The figure shows that all masses between R and Excel relatively differ less than 1 percentile. 
 
 ```{r comparison of steady state emissions using SB1Solve, include= TRUE, echo= FALSE, warning=FALSE}
 
@@ -452,14 +279,14 @@ emissions <- data.frame(Abbr = c("aRS", "s2RS", "w1RS"), Emis = c(10000, 10000, 
 MW <- World$fetchData("MW")
 
 emissions <- emissions |>
-  mutate(Emis = Emis*1000/(MW*365*24*60*60))
+  mutate(Emis = Emis*1000/(365*24*60*60))
 
 SSsolve.R <- World$Solve(emissions)
 
 SSsolve.excel <- read.xlsx(SBExcelName,
                              sheet=8,
                              colNames=TRUE,
-                             rows=c(167,168))
+                             rows=c(167,169))
 
 SSsolve.excel <- SSsolve.excel |>
   select(-c(STEADY.STATE)) |>
@@ -497,7 +324,7 @@ merged_SS_SB1 <- merge(SSsolve.R, SSsolve.excel, by=c("Abbr", "Species"), suffix
 #Diff per "to" compartment
 ggplot(merged_SS_SB1, aes (x = Abbr, y = reldiff)) +
   geom_boxplot() +
-  ggtitle(paste0("Figure 7: Relative differences between steady state masses in excel and R (SB1solve) - ", substance)) +
+  ggtitle(paste0("Figure 5: Relative differences between steady state masses in excel and R (SB1solve) - ", substance)) +
   geom_hline(yintercept = 0.001, color="red") +
   geom_hline(yintercept = -0.001, color="red") +
   custom_theme() + 
@@ -515,7 +342,7 @@ The following adjustments are then initialized:
 
 - Thermal velocity in heteroagglomeration is now calculated according to the temperature of the scale, instead of a constant value of T = 285K. 
 
-As can be observed from Figure 8 and 9, Relative differences become large (>0.8). Most of these differences are attributed to the adjustments in the Dry Deposition implementation. 
+As can be observed from Figure 6 and 7, Relative differences become large (>0.8). Most of these differences are attributed to the adjustments in the Dry Deposition implementation. 
 ```{r comparison of fluxes with test FALSE, include=TRUE, echo=FALSE, warning=FALSE}
 World$SetConst(Test = "FALSE")
 World$UpdateKaas(mergeExisting = FALSE)
@@ -634,7 +461,7 @@ mergedkaas <- as_tibble(mergedkaas) |> mutate(relDif = diff/k_R)
 ggplot(mergedkaas, aes(x = to, y = from, color = abs(diff))) + 
   geom_point() +
   scale_color_gradient(low = "green", high = "red", trans = "log10") +
-  ggtitle(paste0("Figure 8: Absolute differences k's between R and excel for ", substance, "with Test = FALSE")) +
+  ggtitle(paste0("Figure 6: Absolute differences k's between R and excel for ", substance, "with Test = FALSE")) +
   theme(
     axis.text.y = element_text(size = 12),
     axis.text.x = element_text(angle = 45, hjust = 1, size = 10), 
@@ -644,7 +471,7 @@ ggplot(mergedkaas, aes(x = to, y = from, color = abs(diff))) +
 ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) + 
   geom_point() +
   scale_color_gradient(low = "green", high = "red") +
-  ggtitle(paste0("Figure 9: Relative differences k's between R and excel for ", substance," with Test = FALSE")) +
+  ggtitle(paste0("Figure 7: Relative differences k's between R and excel for ", substance," with Test = FALSE")) +
   theme(
     axis.text.y = element_text(size = 12),
     axis.text.x = element_text(angle = 45, hjust = 1, size = 10), 
