--- a/vignettes/Development/Quality control/Publication/Microplastic_verification.Rmd
+++ b/vignettes/Development/Quality control/Publication/Microplastic_verification.Rmd
@@ -177,7 +177,7 @@ sum of the removal process k's (i.e. degradation or burial).
 custom_theme <- function() {
   theme(
     axis.text.y = element_text(size = 12),
-    axis.text.x = element_text(angle = 45, hjust = 1, size = 10), 
+    axis.text.x = element_text(angle = 90, hjust = 1, size = 8), 
     plot.margin = margin(t = 10, r = 10, b = 30, l = 10)#,
     #panel.background = element_rect(fill = "white", colour = "grey"),   # White background
     #panel.grid.major = element_line(colour = "grey")#,                   # Black major grid lines
@@ -221,8 +221,8 @@ ggplot(mergedkaas, aes(x = to, y = from, color = abs(diff))) +
   scale_color_gradient(low = "green", high = "red", trans = "log10") +
   ggtitle(paste0("Figure 3: Absolute differences k's between R and excel for ", substance)) +
   theme(
-    axis.text.y = element_text(angle = 45, hjust = 1, size = 10),
-    axis.text.x = element_text(angle = 45, hjust = 1, size = 10), 
+    axis.text.y = element_text(hjust = 1, size = 8),
+    axis.text.x = element_text(angle = 90, hjust = 1, size = 8), 
     plot.margin = margin(t = 10, r = 10, b = 30, l = 10)
   )
 
@@ -231,8 +231,8 @@ ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) +
   scale_color_gradient(low = "green", high = "red") +
   ggtitle(paste0("Figure 4: Relative differences k's between R and excel for ", substance)) +
   theme(
-    axis.text.y = element_text(size = 9),
-    axis.text.x = element_text(angle = 45, hjust = 1, size = 10), 
+    axis.text.y = element_text(size = 8),
+    axis.text.x = element_text(angle = 90, hjust = 1, size = 8), 
     plot.margin = margin(t = 10, r = 10, b = 30, l = 10)
   )
 ```
@@ -386,8 +386,8 @@ ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) +
   scale_color_gradient(low = "green", high = "red") +
   ggtitle(paste0("Figure 6: Relative differences k's between R and excel for ", substance)) +
   theme(
-    axis.text.y = element_text(size = 12),
-    axis.text.x = element_text(angle = 45, hjust = 1, size = 12), 
+    axis.text.y = element_text(size = 8),
+    axis.text.x = element_text(angle = 90, hjust = 1, size = 8), 
     plot.margin = margin(t = 10, r = 10, b = 30, l = 10)
   )
 ```
@@ -458,6 +458,5 @@ ggplot(merged_SS_SB1, aes (x = Abbr, y = reldiff)) +
   geom_hline(yintercept = 0.001, color="red") +
   geom_hline(yintercept = -0.001, color="red") +
   custom_theme() + 
-  theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
-        aspect.ratio = 1/3) 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5)) 
 ```
