--- a/vignettes/Development/Quality control/Publication/Particulate-verification.Rmd
+++ b/vignettes/Development/Quality control/Publication/Particulate-verification.Rmd
@@ -204,12 +204,15 @@ ggplot(sorted_diff, aes(x = from, y = reldif)) +
   labs(x = "from", y = "Relative diff")
 ```
 
+
+#### Dissolution
 As can be seen in Figure 2 above, there are large relative differences between the 
 diagonal k's in excel and R in the soil compartment. This difference is caused by
 dissolution (kdis) not being implemented in R, whereas it is implemented in excel. 
 When using Test=TRUE, the kdis values in R are added to the kdeg values to recreate
 the removal from soil as it is implemented in excel. 
 
+#### Dry deposition
 The other relative differences between the diagonal k's in excel and R are in the 
 air compartment. This is caused by a difference in the dry deposition process. 
 In R, dry deposition is implemented in a new manner, according to the Loteur v2 
@@ -250,11 +253,13 @@ large_differences <- mergedkaas |>
   arrange(desc(relDif))
 ```
 
+#### Dry deposition
 As can be seen in Figure 4, the largest relative differences in k's between R and
 excel are in the k's from air to soil and water. These differences can also be 
 attributed to the different implementation of the dry deposition process between 
 excel and R.
 
+#### Thermal velocity heteroagglomeration
 A smaller difference that was found between the k's in R and excel is the value 
 for thermal velocity in heteroagglomeration. In excel, a constant value of 285K 
 was used. In R, this value was updated by calculating the value specifically 
