--- a/vignettes/Development/Quality control/Publication/Molecular verification - base.Rmd
+++ b/vignettes/Development/Quality control/Publication/Molecular verification - base.Rmd
@@ -135,7 +135,7 @@ mergedkaas <- as_tibble(mergedkaas) |> mutate(relDif = diff/k_R)
 ```
 
 ## Compare k's
-When comparing k's between R and excel, the goal is that the difference is less
+When comparing k's between R and excel, the goal is that the relative difference is less
 than 1 percentile for each k. The reason is that smaller differences often are 
 a result of differences in rounding values between excel and R, and not the result
 of mistakes in calculations or different input values. In this vignette two types of 
