--- a/vignettes/Development/Quality control/Publication/Molecular verification - base.Rmd
+++ b/vignettes/Development/Quality control/Publication/Molecular verification - base.Rmd
@@ -4,7 +4,7 @@ author: "Anne Hids"
 date: "`r Sys.Date()`"
 output: github_document
 editor_options: 
-  chunk_output_type: inline
+  chunk_output_type: console
   markdown: 
     wrap: 72
 ---
@@ -37,9 +37,14 @@ Potential_substances <- c("1-aminoanthraquinone", # no class
                           "Sb(III)" # metal
                           ) 
               
-substance <- Potential_substances[3]
+Substance <- Potential_substances[3]
 
 source("baseScripts/initWorld_onlyMolec.R")
+
+World$substance <- Substance
+
+substance <- World$substance
+
 ```
 
 ```{r data xlsx and R, echo=FALSE, warning=FALSE}
@@ -136,7 +141,7 @@ mergedkaas <- as_tibble(mergedkaas) |> mutate(relDif = diff/k_R)
 
 ## Compare k's
 When comparing k's between R and excel, the goal is that the relative difference is less
-than 1 percentile for each k. The reason is that smaller differences often are 
+than 0.001 for each k. The reason is that smaller differences often are 
 a result of differences in rounding values between excel and R, and not the result
 of mistakes in calculations or different input values. In this vignette two types of 
 k's are compared: diagonal k's and from-to k's.
@@ -188,7 +193,7 @@ ggplot(merged_diagonal, aes(x = from, y = reldif)) +
 ```
 
 Figures 1 and 2 above show the absolute and relative differences in diagonal k's between R and excel. 
-As can be seen in Figure 2, relative differences larger than 1 percentile are in the lake, river, sea, air and sediment subcompartments. 
+As can be seen in Figure 2, relative differences larger than 0.001 are in the lake, river, sea, air and sediment subcompartments. 
 
 ```{r filter large diagonal differences, include=FALSE, echo=FALSE}
 diagonal_diffs <- merged_diagonal |>
@@ -276,7 +281,7 @@ large_differences <- mergedkaas |>
 
 #### Sedimentation and resuspension
 As can be seen in Figure 4 above, the k's that have a relative difference larger
-than 1 percentile go from water to sediment or from sediment to water. Changing 
+than 0.001 go from water to sediment or from sediment to water. Changing 
 the formula for calculating settling velocity when Test = TRUE for the sedimentation
 and resuspension processes (explained above under 'Settling velocity') also solves these differences.
 
@@ -393,12 +398,12 @@ ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) +
 
 As can be seen in Figures 5 and 6, the temporary changes made using the Test variable 
 solved the large differences in k's between R and excel for both the diagonal and the 
-from-to k's. All relative differences are now smaller than 1 percentile. 
+from-to k's. All relative differences are now smaller than 0.001. 
 
 ## Compare steady state emissions
 
 The steady state masses in R and Excel were compared by calculating the relative differences
-between the masses in R and Excel (Figure 7). The figure shows that all masses between R and Excel relatively differ less than 1 percentile. 
+between the masses in R and Excel (Figure 7). The figure shows that all masses between R and Excel relatively differ less than 0.001. 
 
 ```{r comparison of steady state emissions using SB1Solve, include=TRUE, echo=FALSE, warning=FALSE}
 
