--- a/vignettes/Development/Quality control/10.4 Case Study Chitosan.Rmd
+++ b/vignettes/Development/Quality control/10.4 Case Study Chitosan.Rmd
@@ -38,6 +38,8 @@ substance <- "GO-Chitosan"
 source("baseScripts/initWorld_onlyParticulate.R")
 #source("baseScripts/initworld_onlyMolec.R")
 
+World$substance <- substance
+
 length(unique(World$kaas$process))
 
 ProcessNanoFunctions <- c("k_Advection", "k_Burial",
