--- a/vignettes/Development/Quality control/10.2 Template R vs Excel comparison particulates.Rmd
+++ b/vignettes/Development/Quality control/10.2 Template R vs Excel comparison particulates.Rmd
@@ -58,6 +58,8 @@ substance <- Potential_substances[6]
 source("baseScripts/initWorld_onlyParticulate.R")
 #source("baseScripts/initworld_onlyMolec.R")
 
+World$substance <- substance
+
 length(unique(World$kaas$process))
 
 ProcessNanoFunctions <- c("k_Advection", "k_Burial",
