--- a/vignettes/Development/Quality control/10.3 Template R vs Excel comparison plastics.Rmd
+++ b/vignettes/Development/Quality control/10.3 Template R vs Excel comparison plastics.Rmd
@@ -59,6 +59,8 @@ substance <- Potential_substances[8]
 source("baseScripts/initWorld_onlyPlastics.R")
 #source("baseScripts/initworld_onlyMolec.R")
 
+World$substance <- substance
+
 length(unique(World$kaas$process))
 
 ProcessNanoFunctions <- c("k_Advection", "k_Burial",
